# clone_repo

./: .travis.yml  Doxyfile  README.md  deploy.sh
homework1/helloworld/: CMakeLists.txt  main.cpp
homework10/: CMakeLists.txt  bulk_builder.cpp  bulk_builder.h  console_log_writer.h  file_writer.h  main.cpp  observer.h  thread_object.h  unit_tests.cpp
homework11/: CMakeLists.txt  async.cpp  main.cpp  unit_tests.cpp
homework11/bulk_builder/: console_log_writer.h
homework12/: CMakeLists.txt  async.cpp  async.h  builder_selector.cpp  builder_selector.h  command_queue.h  main.cpp  server.cpp  server.h  session.cpp  session.h
homework12/bulk_builder/: ThreadPool.h  bulk_builder.cpp  bulk_builder.h  observable.h  observer.h  thread_object.h
homework2/: CMakeLists.txt  filter.h  main.cpp  sort.h  split.h  types.h  unit_tests.cpp
homework3/: CMakeLists.txt  main.cpp  map_allocator.h  simple_list.h  unit_tests.cpp
homework4/: CMakeLists.txt  main.cpp  print_ip.h  sfinae_tests.h  unit_tests.cpp  vtype_traits.hpp
homework5/common/: primitive.cpp  primitive.h  primitive_factory.h  primitive_saver.h  primitive_visitor.h
homework5/mvc/: .directory  CMakeLists.txt  main.cpp  scene_controller.h  scene_model.h  scene_view.h
homework5/mvp/: .directory  CMakeLists.txt  i_scene_view.h  main.cpp  scene_graph_view.cpp  scene_graph_view.h  scene_list_view.cpp  scene_list_view.h  scene_model.h  scene_presenter.h
homework6/: CMakeLists.txt  element.h  main.cpp  matrix.h  matrix_iterator.h  matrixold.h  unique_element.h  unit_tests.cpp
homework7/: CMakeLists.txt  bulk_builder.cpp  bulk_builder.h  console_log_writer.h  file_writer.h  input.txt  main.cpp  observable.h  observer.h  unit_tests.cpp
homework8/: 1196.cpp  1496.cpp  1545.cpp  1837.cpp  CMakeLists.txt
lessons/source-07/: CMakeLists.txt  arrays.cpp  custom_shared.cpp  enable_shared_from_this.cpp  shared_ptr.cpp  ub.cpp  unique_ptr.cpp
lessons/source-08/: CMakeLists.txt  allocator.cpp  byte.cpp  emplace_back.cpp  polymorphism.cpp  string_view.cpp
lessons/source-09/: CMakeLists.txt  any.cpp  begin.cpp  metafunctions.cpp  optional.cpp  sfinae.cpp
lessons/source-10/: CMakeLists.txt  dry.cpp  tda.cpp  union.cpp  variant.cpp
lessons/source-11/: CMakeLists.txt  high_cohesion.cpp  indirection.cpp  low_coupling.cpp  map.cpp  relations.cpp  type_traits.cpp
lessons/source-12/: CMakeLists.txt  builder.cpp  dependency_injection.cpp  factory_method.cpp  lazy_initialization.cpp  multiton.cpp  object_pool.cpp  pretty.h  prototype.cpp  singleton.cpp
lessons/source-13/: CMakeLists.txt  adapter.cpp  bridge.cpp  chars.cpp  composite.cpp  decorator.cpp  facade.cpp  flyweight.cpp
lessons/source-14/: CMakeLists.txt  chain_of_responsibility.cpp  command.cpp  interpreter.cpp  iterator.cpp  mediator.cpp  memento.cpp  merge.cpp
lessons/source-15/: CMakeLists.txt  observer.cpp  state.cpp
lessons/source-16/: CMakeLists.txt  array.cpp  deque.cpp  forward_list.cpp  list.cpp  map.cpp  multiset.cpp  queue.cpp  stack.cpp  unordered_set.cpp  vector.cpp
lessons/source-17/: CMakeLists.txt  accumulate.cpp  any_of.cpp  binary_search.cpp  copy.cpp  heap.cpp  min_max.cpp  permutations.cpp  remove.cpp  rotate.cpp  sort.cpp  transform.cpp
lessons/source-18/source/: CMakeLists.txt  bimap.cpp  circular_buffer.cpp  format.cpp  fusion.cpp  iterators.cpp  multi_index.cpp  program_options.cpp  tokenizer.cpp
lessons/source-19/: CMakeLists.txt  fusion.cpp  interprocess.cpp  lightweight.cpp  serialization.cpp  signals2.cpp
lessons/source-20/: CMakeLists.txt  async.cpp  condition.cpp  interprocess2.cpp  motivation.cpp  promise.cpp  thread.cpp
lessons/source-21/: nuclear_reaction.cpp
lessons/source-22/: CMakeLists.txt  cashier_events.cpp  events.cpp  threads.cpp
lessons/source-24/: CMakeLists.txt  atomic_flag.cpp  atomicity.cpp  increment.cpp  memory_order_acq_rel.cpp  memory_order_relaxed.cpp  memory_order_seq.cpp  operations.cpp  perfomance.cpp  reordering.cpp
lessons/source-25/: json.cpp  protobuf.cpp  protobuf.pb.cc  protobuf.pb.h  protobuf.proto
lessons/source-26/: CMakeLists.txt  asio_async_client.cpp  asio_client.cpp  asio_resolver.cpp  asio_server.cpp  asio_timer.cpp  poco_big.cpp  zeromq_client.cpp  zeromq_publisher.cpp  zeromq_server.cpp  zeromq_subscriber.cpp
lessons/source-30/: CMakeLists.txt  DAO.cpp  Repository.cpp  motivation1.cpp  motivation2.cpp  utils.cpp  utils.h
lessons/source-30/odb_example/: CMakeLists.txt  database.hxx  main.cpp  other_person-odb.cxx  other_person-odb.hxx  other_person-odb.ixx  other_person.cpp  other_person.hxx  person-odb.cxx  person.cpp  person.hxx
lessons/source-30/sqlite/: CMakeLists.txt
timus/: judgeid.txt
timus/homework2/: 1000.cpp  1001.cpp  1293.cpp  1785.cpp  2012.cpp  CMakeLists.txt  test_in.txt
timus/homework3/: 1264.cpp  1409.cpp  1787.cpp  1877.cpp  2001.cpp  CMakeLists.txt
timus/homework4/: 1197.cpp  1639.cpp  1820.cpp  1880.cpp  2066.cpp  CMakeLists.txt
timus/homework5/: 1086.cpp  1582.cpp  CMakeLists.txt
